--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="./index.html">
+  <a class="navbar-brand" href="/">
     <img class="logo" src="../images/favicon.png"/>
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -8,39 +8,39 @@
   
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="./phone.html">
+      <li class="nav-item">
+        <a class="nav-link" href="/phone">
           <img class="nav-icon" src="../images/phone.png" alt="Điện thoại">
           <span class="item-name">Điện thoại</span>
         </a>
       </li>
       <li class="nav-item ">
-        <a class="nav-link" href="./laptop.html">
+        <a class="nav-link" href="/laptop">
           <img class="nav-icon" src="../images/laptop.png" alt="Laptop">
           <span class="item-name">Laptop</span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="./tablet.html">
+        <a class="nav-link" href="/tablet">
           <img class="nav-icon" src="../images/tablet.png" alt="Tablet">
           <span class="item-name">Tablet</span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="./camera.html">
+        <a class="nav-link" href="/camera">
           <img class="nav-icon" src="../images/camera.png" alt="Camera">
           <span class="item-name">Máy ảnh</span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="./accessories.html">
+        <a class="nav-link" href="/accessories">
           <img class="nav-icon" src="../images/accessories.png" alt="Phụ kiện">
           <span class="item-name">Phụ kiện</span>
         </a>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0 col-lg-7 d-inline-flex justify-content-end">
-      <input class="form-control form-control-lg mr-sm-2 col-lg-9" type="search" placeholder="Bạn muốn tìm gì" aria-label="Search">
+    <form class="form-inline my-2 my-lg-0 col-lg-7 d-inline-flex justify-content-end" action="/search">
+      <input id="txt-search" name="keyword" class="form-control form-control-lg mr-sm-2 col-lg-9" type="search" placeholder="Bạn muốn tìm gì" aria-label="Search">
       <button class="btn btn-outline-success btn-search btn-lg my-1 my-sm-0" type="submit">Tìm kiếm</button>
     </form>
     <a class="nav-link fa fa-shopping-cart" style="font-size:36px" href="./../images/abc.jpg">
