changer le modèle de commentaire

--- a/views/partials/productrow.hbs
+++ b/views/partials/productrow.hbs
@@ -6,7 +6,7 @@
             <h6>{{this.title}}</h6>
         </a>
         <p class="price">{{this.price}}d</p>
-        <div class="specification">{{this.description}}</div>
+        <div class="specification">{{this.shortDescription}}</div>
     </div>
     {{/each}}
 </div>
