--- a/views/productDetail.hbs
+++ b/views/productDetail.hbs
@@ -87,9 +87,9 @@
       <h4>Đặc điểm nổi bật của {{product.title}}</h4>
       <hr>
       <div class="product-description">
-        <p>{{product.title}}</p>
-        {{product.description}}
+        {{{product.description}}}
       </div>
+      <hr>
       <h4>Bình luận của khách hàng</h4>
       <div class="comments">
         <form method="POST" onsubmit="return postComment(event)">
